--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
 <text>
-  hello world
+  <h1>
+  How To Speed Run Minecraft
+  </h1>
 </text>
+<text2>
+  <p>
+  1. Chop some trees and mine some stone. Then, craft a stone axe and stone pickaxe. If you come across chickens, kill them to gather feathers, which are needed later.
+  </p>
+</text2>
+<img src="aid3112206-v4-728px-Live-in-a-Village-in-Minecraft-Step-1-Version-2.jpg.webp.jpeg">
+<text3>
+  <p>
+  2. Once you have an axe and a pickaxe, look for a village near your spawn location. If it takes too long to find a village, it may be quicker to restart the run.
+  </p>
+</text3>
